fix jacoco report problem